[tool.poetry]
name = "fast-um"
version = "0.1.0"
description = ""
authors = ["marciormta <marcio_mota@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
